<resources>
    <string name="app_name">极速电影</string>
    <string name="chengdu">成都</string>
    <string name="hot">热映</string>
    <string name="wait">待映</string>
    <string name="seek">找片</string>
    <string name="movie">电影</string>
    <string name="cinema">影院</string>
    <string name="discover">发现</string>
    <string name="mine">我的</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_news">查找资讯</string>
    <string name="cancel">取消</string>
    <string name="top1">今日TOP10</string>
    <string name="kuaixun">影视快讯</string>
    <string name="piaofang">实时票房</string>
    <string name="audience">观众</string>
    <string name="buy_ticket">购票</string>
    <string name="choose">请选择</string>
    <string name="zixun">资讯</string>
    <string name="topic">话题</string>
    <string name="GlobalFilmAwards">全球电影奖项</string>
    <string name="AllFilm">全部电影奖项</string>
    <string name="prevue">预告片推荐</string>
    <string name="prospect">近期最受期待</string>
    <string name="xiepin">写评论...</string>
    <string name="fabiao">发表</string>
    <string name="search_cinema">查找影院</string>
    <string name="yushou">预售</string>
    <string name="xiangkan">想看</string>
    <string name="sure">确定</string>
    <string name="daipingjia">待评价</string>
    <string name="pingjia">评价</string>
</resources>
