<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView 
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="10dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <Button
                android:id="@+id/btn_top"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@mipmap/top1"
                android:text="@string/top1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:gravity="center"
                android:id="@+id/btn_kuaixun"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@mipmap/kuaixun"
                android:text="@string/kuaixun"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_piaofang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableTop="@mipmap/piaofang"
                android:text="@string/piaofang"/>
        </LinearLayout>
    </LinearLayout>
   
    
</android.support.v7.widget.CardView>